# scitsifreine

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  python-lint-test.yml
src/: lib.rs  main.rs  multissh.py  scitsi  scitsifreine.py
src/scitsifreine/: __init__.py  exceptions.py  internal.py
src/tests/: test_ansible_inventory.py  test_helper_methods.py  test_internal_methods.py
src/tests/test_ansible_inventory/: test_inventory01.ini  test_inventory01.yml  test_inventory02.ini  test_inventory02.yml  test_inventory03.ini  test_inventory03.yml
