[package]
name = "scitsifreine"
version = "0.2.0"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
repository = "https://github.com/flying7eleven/scitsifreine"
description = "A simple tool for automatically creating a tmux window with ssh connection to all supplied hosts."
keywords = ['ssh', 'tmux', 'multissh']
categories = ['command-line-utilities']
readme = "README.md"
license = "MIT"
rust-version = "1.60.0"

[features]
default = ["ansible-inventories"]
ansible-inventories = ["dep:rust-ini"]

[dependencies.chrono]
version = "0.4.34"
default-features = false
features = ["std"]

[dependencies.clap]
version = "4.5.0"
default-features = false
features = ["std", "derive", "usage", "help", "wrap_help"]

[dependencies.fern]
version = "0.6.2"
default-features = false
features = ["chrono"]

[dependencies.log]
version = "0.4.20"
default-features = false
features = ["std"]

[dependencies.rust-ini]
version = "0.20.0"
default-features = false
optional = true

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]