[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "scitsifreine"
description = "Tool for creating multiple ssh sessions using tmux"
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]
authors = [
    { name = "Tim Janke", email = "tim+github@janke.biz" },
]
maintainers = [
    { name = "Tim Janke", email = "tim+github@janke.biz" },
]
# see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Systems Administration",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/flying7eleven/scitsifreine.git"
Issues = "https://github.com/flying7eleven/scitsifreine/issues"
Changelog = "https://github.com/flying7eleven/scitsifreine/blob/main/CHANGELOG.md"

[project.scripts]
scitsi = "scitsifreine:main_cli"